[전체화면 보완]

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,7 +85,7 @@ header.header{width:100%;min-width:1500px;height:100px;display:flex;border-botto
 .header .logo img{margin: 0 auto;}
 .header .logo_div{width:270px;height:100px;background:#2e3144;padding-top:38px;flex-shrink:0;}
 .header .top_div{flex-grow:1;position:relative;}
-.loca{position:absolute;left:50px;top:35px;transition:0.15s;}
+.loca{position:absolute;left:50px;top:38px;transition:0.15s;}
 .loca li{background:url(../images/bar_loca.png) no-repeat 0 center;padding-left:18px;margin-left:9px;float:left;font-size:20px;color:#878787;}
 .loca li:first-child{background:none;padding-left:0;margin-left:0;}
 .loca li .ico_home{display:inline-block;background:url(../images/ico_home.png) no-repeat center center;width:25px;height:23px}
@@ -100,10 +100,10 @@ header.header{width:100%;min-width:1500px;height:100px;display:flex;border-botto
 
 .container{display:flex;height:calc(100vh - 100px);margin-top:100px;}
 .container.full_screen_mode.active{height:100%;margin-top:0;}
-.container.full_screen_mode.active .container{height:100%;}
+.container.full_screen_mode.active .container{height:calc(100% - 50px);}
 .container.full_screen_mode.active .spreadSheet{height:100%;}
-.container.full_screen_mode.active .content_wrap{width:100%;margin-left:0;padding: 0px;height: 100%;}
-.container.full_screen_mode.active .content_box{height: 100%; margin-top: 0;}
+.container.full_screen_mode.active .content_wrap{width:100%;margin-left:0;padding: 50px;height: 100%;}
+.container.full_screen_mode.active .content_box{height:calc(100% - 50px); margin-top: 0;}
 .container.full_screen_mode.active .search_box.active{margin-bottom: 19px;}
 .left_nav_wrap{width:270px;flex-shrink:0;background:#242632;overflow-y:auto;height:calc(100vh - 100px);position:fixed;top:100px;left:0;z-index:50}
 .left_nav_wrap{-ms-overflow-style:none;scrollbar-width:none;}
@@ -136,10 +136,12 @@ header.header{width:100%;min-width:1500px;height:100px;display:flex;border-botto
 .content_top .div{position:absolute;top:0;right:0;}
 .btn_fold{width:30px;height:30px;background:var(--pointColor) url(../images/ico_srch_fold.png) no-repeat center center;border:1px solid var(--pointColor);border-radius:4px;text-align:center;text-indent:-9999px;font-size:0;}
 .unfold{background:#fff url(../images/ico_srch_unfold.png) no-repeat center center;}
-.btn_search{width:120px;height:30px;border:1px solid var(--pointColor);border-radius:4px;background:#fff;text-align:center;margin-left:12px;}
+.btn_search{width:120px;height:30px;border:1px solid var(--pointColor);border-radius:4px;background:#fff;text-align:center;margin-left:5px;}
 .btn_search>*{display:inline-block;vertical-align:middle;}
 .btn_search .ico_srch{background:url(../images/ico_srch.png) no-repeat center center;display:inline-block;width:17px;height:17px;}
 .btn_search span{font-size:18px;font-weight:bold;color:var(--pointColor);margin-left:7px;}
+.btn_fullscreen_on{width:30px;height:30px;background:url(../images/fullscreen-on-icon.png) no-repeat center center; display:none;}
+.btn_fullscreen_off{width:30px;height:30px;background:url(../images/fullscreen-off-icon.png) no-repeat center center;}
 
 .search_box{display:none;height:0;}
 .search_box.active{display:block;height:auto}
@@ -232,13 +234,12 @@ input.ipt_date{width:113px;width:calc(100% - 38px);margin-right:9px;text-align:c
   border-radius: 4px;
   background: var(--pointColor);
   text-align: center;
-  margin-right: 12px;
+  margin-left: 5px;
   color: #fff;
 }
 
 .btn_page span {
   font-size: 18px;
-  font-weight: bold;
   color: #fff;
   margin-left: 7px;
 }
