--- a/views/ejs/sample2.ejs
+++ b/views/ejs/sample2.ejs
@@ -1,3 +1,11 @@
+<div class="content_top">
+  <div class="cont_tit">표준원가</div>
+  <div class="div">
+      <button class="btn_fullscreen_off"></button>
+      <button class="btn_fullscreen_on"></button>
+  </div>
+</div>
+
 <div class="content_box">
   <div class="container-fluid" style="height: 100%;display: flex;">
       <div id="chart" style="width:50%;height: 100%;padding: 50px;"></div>
