--- a/views/ejs/sample23.ejs
+++ b/views/ejs/sample23.ejs
@@ -1,6 +1,8 @@
 <div class="content_top">
     <div class="cont_tit">배송내역서 신규</div>
     <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button id="btnSave" class="btn_search">
             <span>저장</span>
         </button>
@@ -51,7 +53,7 @@ table.srch_tbl {
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+    height: calc(100% - 117px);
 }
 </style>
 <script src="js/<%= pathJs %>/sample23.js" type="text/javascript"></script>
