--- a/views/ejs/sample5.ejs
+++ b/views/ejs/sample5.ejs
@@ -1,6 +1,8 @@
 <div class="content_top">
   <div class="cont_tit">시공스케줄</div>
   <div class="div">
+    <button class="btn_fullscreen_off"></button>
+    <button class="btn_fullscreen_on"></button>
     <button class="btn_search">
       <i class="ico_srch"></i>
       <span>search</span>
@@ -76,7 +78,7 @@
   height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+  height: calc(100% - 117px);
 }
 
 .legend {
