--- a/views/ejs/sample1.ejs
+++ b/views/ejs/sample1.ejs
@@ -1,3 +1,11 @@
+<div class="content_top">
+  <div class="cont_tit">표준원가</div>
+  <div class="div">
+      <button class="btn_fullscreen_off"></button>
+      <button class="btn_fullscreen_on"></button>
+  </div>
+</div>
+
 <div class="content_box">
     <div class="sample-tutorial">
         <div id="ss" class="sample-spreadsheets"></div>
