--- a/views/ejs/sample10.ejs
+++ b/views/ejs/sample10.ejs
@@ -1,16 +1,18 @@
 <div class="content_top">
     <div class="cont_tit">주간일보관리</div>
     <div class="div">
-      <button id="addRow" class="btn_search">
-        <span>행추가</span>
-      </button>
-      <button id="saveRow" class="btn_search">
-        <span>저장</span>
-      </button>
-      <button class="btn_search">
-        <i class="ico_srch"></i>
-        <span>search</span>
-      </button>
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
+        <button id="addRow" class="btn_search">
+            <span>행추가</span>
+        </button>
+        <button id="saveRow" class="btn_search">
+            <span>저장</span>
+        </button>
+        <button class="btn_search">
+            <i class="ico_srch"></i>
+            <span>search</span>
+        </button>
     </div>
   </div>
           
@@ -76,7 +78,7 @@
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+    height: calc(100% - 117px);
 }
 .sample-tutorial {
    position: relative;
