--- a/views/ejs/sample11.ejs
+++ b/views/ejs/sample11.ejs
@@ -1,12 +1,8 @@
 <div class="content_top">
     <div class="cont_tit">출고요청서</div>
     <div class="div">
-        <!-- <button id="btnChart" class="btn_search">
-            <span>물류현황</span>
-        </button>
-        <button id="btnSample19" class="btn_search">
-            <span>출고집계현황</span>
-        </button> -->
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button class="btn_search">
             <i class="ico_srch"></i>
             <span>search</span>
@@ -66,7 +62,7 @@
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+    height: calc(100% - 117px);
 }
 </style>
 <script src="js/<%= pathJs %>/sample11.js" type="text/javascript"></script>
