--- a/views/ejs/sample12.ejs
+++ b/views/ejs/sample12.ejs
@@ -1,6 +1,8 @@
 <div class="content_top">
     <div class="cont_tit">배송내역서</div>
     <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button id="save" class="btn_search">
             <span>엑셀 다운로드</span>
         </button>
@@ -60,7 +62,7 @@
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+    height: calc(100% - 117px);
 }
 .sample-tutorial {
    position: relative;
