--- a/views/ejs/sample14.ejs
+++ b/views/ejs/sample14.ejs
@@ -1,6 +1,8 @@
 <div class="content_top">
     <div class="cont_tit">배송상차관리</div>
     <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button id="btnGrid" class="btn_search">
             <span>목록</span>
         </button>
@@ -99,7 +101,7 @@
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+    height: calc(100% - 117px);
 }
 .sample-tutorial {
     position: relative;
