--- a/views/ejs/sample15.ejs
+++ b/views/ejs/sample15.ejs
@@ -1,15 +1,14 @@
 <div class="content_top">
     <div class="cont_tit">배송내역서 상세</div>
     <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button id="btnExcel" class="btn_search">
             <span>엑셀 다운로드</span>
         </button>
         <button id="btnGrid" class="btn_search">
             <span>목록</span>
         </button>
-        <!-- <button id="btnGrid2" class="btn_search">
-            <span>배송내역서</span>
-        </button> -->
     </div>
 </div>
 
