--- a/views/ejs/sample16.ejs
+++ b/views/ejs/sample16.ejs
@@ -1,9 +1,8 @@
 <div class="content_top">
     <div class="cont_tit">물류현황</div>
     <div class="div">
-        <!-- <button id="btnGrid" class="btn_search">
-            <span>출고요청서</span>
-        </button> -->
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button class="btn_search">
             <i class="ico_srch"></i>
             <span>search</span>
@@ -58,7 +57,7 @@
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+    height: calc(100% - 117px);
 }
 .container-fluid .wj-flexchart .wj-header .wj-title {
   font-weight:bold;
