--- a/views/ejs/sample22.ejs
+++ b/views/ejs/sample22.ejs
@@ -1,6 +1,8 @@
 <div class="content_top">
     <div class="cont_tit">템플릿 관리</div>
     <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button id="btnSave" class="btn_search">
             <span>저장</span>
         </button>
@@ -64,7 +66,7 @@ body {
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+    height: calc(100% - 117px);
 }
 
 .sample-tutorial {
