--- a/views/ejs/sample24.ejs
+++ b/views/ejs/sample24.ejs
@@ -1,3 +1,11 @@
+<div class="content_top">
+    <div class="cont_tit">INTRO</div>
+    <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
+    </div>
+</div>
+
 <div class="container" style="margin-top: 0;">
     <div class="spreadSheet">
         <div id="ribbonHost"></div>
@@ -16,7 +24,7 @@
 }
 
 .spreadSheet {
-    height: calc(100% - 100px);
+    height: calc(100% - 150px);
 }
 
 #ribbonHost {
