--- a/views/ejs/sample25.ejs
+++ b/views/ejs/sample25.ejs
@@ -1,3 +1,11 @@
+<div class="content_top">
+    <div class="cont_tit">DASHBOARD</div>
+    <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
+    </div>
+</div>
+
 <div class="content_box">
     <div class="sample-tutorial">
         <div id="ss" style="width:100%;height:100%"></div>
