--- a/views/ejs/sample3.ejs
+++ b/views/ejs/sample3.ejs
@@ -1,6 +1,8 @@
 <div class="content_top">
     <div class="cont_tit">인사평가 진행 현황</div>
     <div class="div">
+      <button class="btn_fullscreen_off"></button>
+      <button class="btn_fullscreen_on"></button>
       <button class="btn_search">
         <i class="ico_srch"></i>
         <span>search</span>
@@ -73,7 +75,7 @@ body {
 }
 
 .container.full_screen_mode.active .content_box {
-  height: calc(100vh - 122px);
+  height: calc(100% - 117px);
 }
 </style>
 <script src="js/<%= pathJs %>/sample3.js" type="text/javascript"></script>
