--- a/views/ejs/sample31.ejs
+++ b/views/ejs/sample31.ejs
@@ -1,6 +1,8 @@
 <div class="content_top">
     <div class="cont_tit">配送明細書の詳細</div>
     <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button id="btnExcel" class="btn_search">
             <span>DOWNLOAD</span>
         </button>
