--- a/views/ejs/sample35.ejs
+++ b/views/ejs/sample35.ejs
@@ -1,6 +1,8 @@
 <div class="content_top">
     <div class="cont_tit">配送明細書</div>
     <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button id="save" class="btn_search">
             <span>EXCEL</span>
         </button>
@@ -62,7 +64,7 @@
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+    height: calc(100% - 117px);
 }
 .sample-tutorial {
    position: relative;
