--- a/views/ejs/sample6.ejs
+++ b/views/ejs/sample6.ejs
@@ -1,6 +1,8 @@
 <div class="content_top">
   <div class="cont_tit">대리점/제휴점관리</div>
   <div class="div">
+    <button class="btn_fullscreen_off"></button>
+    <button class="btn_fullscreen_on"></button>
     <button class="btn_search">
       <i class="ico_srch"></i>
       <span>search</span>
@@ -53,6 +55,11 @@
 <style>
 .content_box {
   height: calc(100vh - 360px);
+}
+
+.container.full_screen_mode.active .content_box {
+  height: calc(100% - 117px);
+  margin-top: 0;
 }
 
 .sample-tutorial {
