--- a/views/ejs/sample9.ejs
+++ b/views/ejs/sample9.ejs
@@ -1,9 +1,11 @@
 <div class="content_top">
     <div class="cont_tit">장려금/수당관리</div>
     <div class="div">
+        <button class="btn_fullscreen_off"></button>
+        <button class="btn_fullscreen_on"></button>
         <button class="btn_search">
-        <i class="ico_srch"></i>
-        <span>search</span>
+            <i class="ico_srch"></i>
+            <span>search</span>
         </button>
     </div>
 </div>
@@ -61,7 +63,7 @@
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
-    height: calc(100vh - 122px);
+    height: calc(100% - 117px);
 }
 
 .sample-tutorial {
