[버튼 중앙정렬]

--- a/views/ejs/sample10.ejs
+++ b/views/ejs/sample10.ejs
@@ -3,10 +3,10 @@
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="addRow" class="btn_search">
+        <button id="addRow" class="btn_default">
             <span>행추가</span>
         </button>
-        <button id="saveRow" class="btn_search">
+        <button id="saveRow" class="btn_default">
             <span>저장</span>
         </button>
         <button class="btn_search">
