--- a/views/ejs/sample13.ejs
+++ b/views/ejs/sample13.ejs
@@ -3,7 +3,7 @@
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="save" class="btn_search">
+        <button id="save" class="btn_default">
             <span>엑셀 다운로드</span>
         </button>
         <button class="btn_search">
