--- a/views/ejs/sample32.ejs
+++ b/views/ejs/sample32.ejs
@@ -3,7 +3,7 @@
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="btnGrid" class="btn_search">
+        <button id="btnGrid" class="btn_default">
             <span>目録</span>
         </button>
         <button class="btn_search">
@@ -58,10 +58,10 @@
         <div id="ss2" style="width:100%;height:100%"></div>
     </div>
     <div class="div" style="display: flex;justify-content: center;">
-        <button id="save" class="btn_search">
+        <button id="save" class="btn_default">
             <span>DOWNLOAD</span>
         </button>
-        <button class="btn_search btn_close" data-parent="modal1">
+        <button class="btn_default btn_close" data-parent="modal1">
             <span>CLOSE</span>
         </button>
     </div>
@@ -72,10 +72,10 @@
         <div id="ss3" style="width:100%;height:100%"></div>
     </div>
     <div class="div" style="display: flex;justify-content: center;">
-        <button id="save2" class="btn_search">
+        <button id="save2" class="btn_default">
             <span>DOWNLOAD</span>
         </button>
-        <button class="btn_search btn_close" data-parent="modal2">
+        <button class="btn_default btn_close" data-parent="modal2">
             <span>CLOSE</span>
         </button>
     </div>
@@ -86,10 +86,10 @@
         <div id="ss4" style="width:100%;height:100%"></div>
     </div>
     <div class="div" style="display: flex;justify-content: center;">
-        <button id="save3" class="btn_search">
+        <button id="save3" class="btn_default">
             <span>DOWNLOAD</span>
         </button>
-        <button class="btn_search btn_close" data-parent="modal3">
+        <button class="btn_default btn_close" data-parent="modal3">
             <span>CLOSE</span>
         </button>
     </div>
