--- a/views/ejs/sample35.ejs
+++ b/views/ejs/sample35.ejs
@@ -3,10 +3,10 @@
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="save" class="btn_search">
+        <button id="save" class="btn_default">
             <span>EXCEL</span>
         </button>
-        <button id="btnGrid" class="btn_search">
+        <button id="btnGrid" class="btn_default">
             <span>目録</span>
         </button>
         <button class="btn_search">
