--- a/static/css/style.css
+++ b/static/css/style.css
@@ -140,8 +140,11 @@ header.header{width:100%;min-width:1500px;height:100px;display:flex;border-botto
 .btn_search>*{display:inline-block;vertical-align:middle;}
 .btn_search .ico_srch{background:url(../images/ico_srch.png) no-repeat center center;display:inline-block;width:17px;height:17px;}
 .btn_search span{font-size:18px;font-weight:bold;color:var(--pointColor);margin-left:7px;}
-.btn_fullscreen_on{width:30px;height:30px;background:url(../images/fullscreen-on-icon.png) no-repeat center center; display:none;}
-.btn_fullscreen_off{width:30px;height:30px;background:url(../images/fullscreen-off-icon.png) no-repeat center center;}
+.btn_default{width:120px;height:30px;border:1px solid var(--pointColor);border-radius:4px;background:#fff;text-align:center;margin-left:5px;}
+.btn_default>*{display:inline-block;vertical-align:middle;}
+.btn_default span{font-size:18px;font-weight:bold;color:var(--pointColor);}
+.btn_fullscreen_on{width:30px;height:30px;background:url(../images/fullscreen-on-icon.png) no-repeat center center;}
+.btn_fullscreen_off{width:30px;height:30px;background:url(../images/fullscreen-off-icon.png) no-repeat center center; display:none;}
 
 .search_box{display:none;height:0;}
 .search_box.active{display:block;height:auto}
@@ -241,5 +244,4 @@ input.ipt_date{width:113px;width:calc(100% - 38px);margin-right:9px;text-align:c
 .btn_page span {
   font-size: 18px;
   color: #fff;
-  margin-left: 7px;
 }
