--- a/views/ejs/sample15.ejs
+++ b/views/ejs/sample15.ejs
@@ -3,10 +3,10 @@
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="btnExcel" class="btn_search">
+        <button id="btnExcel" class="btn_default">
             <span>엑셀 다운로드</span>
         </button>
-        <button id="btnGrid" class="btn_search">
+        <button id="btnGrid" class="btn_default">
             <span>목록</span>
         </button>
     </div>
