--- a/views/ejs/sample20.ejs
+++ b/views/ejs/sample20.ejs
@@ -3,7 +3,7 @@
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="btnSave" class="btn_search">
+        <button id="btnSave" class="btn_default">
             <span>저장</span>
         </button>
         <button class="btn_search">
