--- a/views/ejs/sample23.ejs
+++ b/views/ejs/sample23.ejs
@@ -3,10 +3,10 @@
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="btnSave" class="btn_search">
+        <button id="btnSave" class="btn_default">
             <span>저장</span>
         </button>
-        <button id="btnGrid" class="btn_search">
+        <button id="btnGrid" class="btn_default">
             <span>목록</span>
         </button>
     </div>
