--- a/views/ejs/sample30.ejs
+++ b/views/ejs/sample30.ejs
@@ -3,10 +3,10 @@
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="btnSave" class="btn_search">
+        <button id="btnSave" class="btn_default">
             <span>貯蔵</span>
         </button>
-        <button id="btnGrid" class="btn_search">
+        <button id="btnGrid" class="btn_default">
             <span>目録</span>
         </button>
     </div>
