--- a/views/ejs/sample31.ejs
+++ b/views/ejs/sample31.ejs
@@ -3,10 +3,10 @@
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="btnExcel" class="btn_search">
+        <button id="btnExcel" class="btn_default">
             <span>DOWNLOAD</span>
         </button>
-        <button id="btnGrid" class="btn_search">
+        <button id="btnGrid" class="btn_default">
             <span>目録</span>
         </button>
         <!-- <button id="btnGrid2" class="btn_search">
