--- a/views/ejs/sample28.ejs
+++ b/views/ejs/sample28.ejs
@@ -1,13 +1,13 @@
 <div class="content_top">
-    <div class="cont_tit">はいそう うちわけしょ</div>
+    <div class="cont_tit">配送内訳書</div>
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
         <button id="btnEnroll" class="btn_page">
-            <span>NEW</span>
+            <span>new</span>
         </button>
         <button id="btnTemplate" class="btn_page">
-            <span>TEMPLATE</span>
+            <span>template</span>
         </button>
         <button class="btn_search">
             <i class="ico_srch"></i>
