--- a/views/ejs/sample40.ejs
+++ b/views/ejs/sample40.ejs
@@ -1,5 +1,5 @@
 <div class="content_top">
-  <div class="cont_tit">施工スケジュール</div>
+  <div class="cont_tit">Construction schedule</div>
   <div class="div">
     <button class="btn_fullscreen_off"></button>
     <button class="btn_fullscreen_on"></button>
@@ -22,7 +22,7 @@
     </colgroup>
     <tbody>
       <tr>
-          <th>基準日付</th>
+          <th>Base date</th>
           <td class="ipt_date_wrap">
               <div class="ipt_date_div">
                   <input type="text" class="ipt_date datepicker">
@@ -32,21 +32,21 @@
                   <input type="text" class="ipt_date datepicker">
               </div>
           </td>
-          <th>施工業者</th>
+          <th>Construction company</th>
           <td>
               <select>
-                  <option>選択</option>
-                  <option>施工業者1</option>
-                  <option>施工業者2</option>
+                  <option>Choice</option>
+                  <option>company1</option>
+                  <option>company2</option>
               </select>
           </td>
-          <th>施工地域</th>
+          <th>Construction area</th>
           <td>
               <select>
-                  <option>選択</option>
-                  <option>施工地域1</option>
-                  <option>施工地域2</option>
-                  <option>施工地域3</option>
+                  <option>Choice</option>
+                  <option>Area1</option>
+                  <option>Area2</option>
+                  <option>Area3</option>
               </select>
           </td>
       </tr>
@@ -57,10 +57,10 @@
 <div class="content_box" style="display: flex;">
   <div class="container-fluid" style="width: 30%;height: 100%;padding-top: 30px;">
       <div class="legend">
-        <div><img src="https://status.slack.com/img/v2/TableMaintenance.png"><span>進行</span></div>
-        <div><img src="https://status.slack.com/img/v2/TableIncident.png">進行</div>
-        <div><img src="https://status.slack.com/img/v2/TableNotice.png">わりあて</div>
-        <div><img src="https://status.slack.com/img/v2/TableOutage.png">中断</div>
+        <div><img src="https://status.slack.com/img/v2/TableMaintenance.png"><span>Progress</span></div>
+        <div><img src="https://status.slack.com/img/v2/TableIncident.png">Defer</div>
+        <div><img src="https://status.slack.com/img/v2/TableNotice.png">Allocation</div>
+        <div><img src="https://status.slack.com/img/v2/TableOutage.png">Interruption</div>
       </div>
       <div id="calendar" class="calendar">
       </div>
@@ -189,12 +189,12 @@ border-top-color: #eb4d5c;
 }
 
 .sample-tutorial {
-  width: 100%;
-  height: 100%;
+ width: 100%;
+ height: 100%;
 }
 .sample-spreadsheets {
-  width: 100%;
-  height: 100%;
+ width: 100%;
+ height: 100%;
 }
 
 .sample-spreadsheets table table {
@@ -224,5 +224,5 @@ border: 1px solid #36495e;
 
 </style>
 
-<script src="plugins/wijmo-5.20232.939_KR/Dist/controls/cultures/wijmo.culture.ja.min.js" type="text/javascript"></script>
-<script src="js/<%= pathJs %>/sample26.js" type="text/javascript"></script>
+<script src="plugins/wijmo-5.20232.939_KR/Dist/controls/cultures/wijmo.culture.en.min.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample40.js" type="text/javascript"></script>
