--- a/views/ejs/sample41.ejs
+++ b/views/ejs/sample41.ejs
@@ -1,5 +1,5 @@
 <div class="content_top">
-    <div class="cont_tit">出庫要請書</div>
+    <div class="cont_tit">Release request form</div>
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
@@ -22,7 +22,7 @@
         </colgroup>
         <tbody>
         <tr>
-            <th>基準日付</th>
+            <th>Base date</th>
             <td class="ipt_date_wrap">
                 <div class="ipt_date_div">
                     <input type="text" class="ipt_date datepicker" value="2023-12-13">
@@ -32,11 +32,11 @@
                     <input type="text" class="ipt_date datepicker" value="2023-12-15">
                 </div>
             </td>
-            <th>受注/注文番号</th>
+            <th>Order number</th>
             <td>
                 <input type="text" value="">
             </td>
-            <th>住所</th>
+            <th>Address</th>
             <td>
                 <input type="text" value="">
             </td>
@@ -65,4 +65,4 @@
     height: calc(100% - 117px);
 }
 </style>
-<script src="js/<%= pathJs %>/sample27.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample41.js" type="text/javascript"></script>
