--- a/views/ejs/sample42.ejs
+++ b/views/ejs/sample42.ejs
@@ -1,8 +1,14 @@
 <div class="content_top">
-    <div class="cont_tit">出庫要請書</div>
+    <div class="cont_tit">Delivery mgt</div>
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
+        <button id="save" class="btn_default">
+            <span>Excel</span>
+        </button>
+        <button id="btnGrid" class="btn_default">
+            <span>List</span>
+        </button>
         <button class="btn_search">
             <i class="ico_srch"></i>
             <span>search</span>
@@ -22,21 +28,21 @@
         </colgroup>
         <tbody>
         <tr>
-            <th>基準日付</th>
+            <th>Base date</th>
             <td class="ipt_date_wrap">
                 <div class="ipt_date_div">
-                    <input type="text" class="ipt_date datepicker" value="2023-12-13">
+                    <input type="text" class="ipt_date datepicker">
                 </div>
                 <span class="line">-</span>
                 <div class="ipt_date_div">
-                    <input type="text" class="ipt_date datepicker" value="2023-12-15">
+                    <input type="text" class="ipt_date datepicker">
                 </div>
             </td>
-            <th>受注/注文番号</th>
+            <th>Order number</th>
             <td>
                 <input type="text" value="">
             </td>
-            <th>住所</th>
+            <th>Order product</th>
             <td>
                 <input type="text" value="">
             </td>
@@ -47,22 +53,28 @@
 
 <div class="content_box">
     <div class="sample-tutorial">
-        <div id="ss" style="width:100%;height:100%"></div>
+        <div id="ss" class="sample-spreadsheets"></div>
     </div>
 </div>
 
-
 <style>
-.sample-tutorial {
-    position: relative;
-    height: 100%;
-    overflow: hidden;
-}
 .content_box {
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
     height: calc(100% - 117px);
 }
+.sample-tutorial {
+   position: relative;
+   height: 100%;
+   overflow: hidden;
+}
+
+.sample-spreadsheets {
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+   float: left;
+}
 </style>
-<script src="js/<%= pathJs %>/sample27.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample42.js" type="text/javascript"></script>
