--- a/views/ejs/sample47.ejs
+++ b/views/ejs/sample47.ejs
@@ -1,8 +1,14 @@
 <div class="content_top">
-    <div class="cont_tit">出庫要請書</div>
+    <div class="cont_tit">Shipping statement</div>
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
+        <button id="btnEnroll" class="btn_page">
+            <span>new</span>
+        </button>
+        <button id="btnTemplate" class="btn_page">
+            <span>template</span>
+        </button>
         <button class="btn_search">
             <i class="ico_srch"></i>
             <span>search</span>
@@ -22,7 +28,15 @@
         </colgroup>
         <tbody>
         <tr>
-            <th>基準日付</th>
+            <th>Order number</th>
+            <td>
+                <input type="text" value="">
+            </td>
+            <th>Writer</th>
+            <td>
+                <input type="text" value="">
+            </td>
+            <th>Date of creation</th>
             <td class="ipt_date_wrap">
                 <div class="ipt_date_div">
                     <input type="text" class="ipt_date datepicker" value="2023-12-13">
@@ -31,14 +45,6 @@
                 <div class="ipt_date_div">
                     <input type="text" class="ipt_date datepicker" value="2023-12-15">
                 </div>
-            </td>
-            <th>受注/注文番号</th>
-            <td>
-                <input type="text" value="">
-            </td>
-            <th>住所</th>
-            <td>
-                <input type="text" value="">
             </td>
         </tr>
         </tbody>
@@ -51,18 +57,17 @@
     </div>
 </div>
 
-
 <style>
-.sample-tutorial {
-    position: relative;
-    height: 100%;
-    overflow: hidden;
-}
 .content_box {
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
     height: calc(100% - 117px);
 }
+.sample-tutorial {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
 </style>
-<script src="js/<%= pathJs %>/sample27.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample47.js" type="text/javascript"></script>
