--- a/views/ejs/sample49.ejs
+++ b/views/ejs/sample49.ejs
@@ -1,11 +1,13 @@
 <div class="content_top">
-    <div class="cont_tit">出庫要請書</div>
+    <div class="cont_tit">New Delivery Statement</div>
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button class="btn_search">
-            <i class="ico_srch"></i>
-            <span>search</span>
+        <button id="btnSave" class="btn_default">
+            <span>Save</span>
+        </button>
+        <button id="btnGrid" class="btn_default">
+            <span>List</span>
         </button>
     </div>
 </div>
@@ -22,23 +24,9 @@
         </colgroup>
         <tbody>
         <tr>
-            <th>基準日付</th>
-            <td class="ipt_date_wrap">
-                <div class="ipt_date_div">
-                    <input type="text" class="ipt_date datepicker" value="2023-12-13">
-                </div>
-                <span class="line">-</span>
-                <div class="ipt_date_div">
-                    <input type="text" class="ipt_date datepicker" value="2023-12-15">
-                </div>
-            </td>
-            <th>受注/注文番号</th>
+            <th>Order number</th>
             <td>
-                <input type="text" value="">
-            </td>
-            <th>住所</th>
-            <td>
-                <input type="text" value="">
+                <input type="text" id="txtNum" value="">
             </td>
         </tr>
         </tbody>
@@ -58,6 +46,9 @@
     height: 100%;
     overflow: hidden;
 }
+table.srch_tbl {
+    border-top: none;
+}
 .content_box {
     height: calc(100vh - 360px);
 }
@@ -65,4 +56,4 @@
     height: calc(100% - 117px);
 }
 </style>
-<script src="js/<%= pathJs %>/sample27.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample49.js" type="text/javascript"></script>
