--- a/views/ejs/left.ejs
+++ b/views/ejs/left.ejs
@@ -56,5 +56,15 @@
                 <li><a href="/sample?depth1=MAIN_JP&depth2=はいそう うちわけしょ&sampleId=28" class="depth2 <%= depth1 == 'MAIN_JP' && depth2 == 'はいそう うちわけしょ' ? 'on' : '' %>"><span>はいそう うちわけしょ</span></a></li>                
             </ul>
         </li>
+        <li>
+            <a href="#" class="depth1" id="MAIN_EN"><span>Key functions</span></a>
+            <ul class="depth2_div">
+                <li><a href="/sample?depth1=MAIN_EN&depth2=INTRO&sampleId=38" class="depth2 <%= depth1 == 'MAIN_EN' && depth2 == 'INTRO' ? 'on' : '' %>"><span>INTRO</span></a></li>
+                <li><a href="/sample?depth1=MAIN_EN&depth2=DASHBOARD&sampleId=39" class="depth2 <%= depth1 == 'MAIN_EN' && depth2 == 'DASHBOARD' ? 'on' : '' %>"><span>DASHBOARD</span></a></li>
+                <li><a href="/sample?depth1=MAIN_EN&depth2=Construction schedule&sampleId=40" class="depth2 <%= depth1 == 'MAIN_EN' && depth2 == 'Construction schedule' ? 'on' : '' %>"><span>Construction schedule</span></a></li>
+                <li><a href="/sample?depth1=MAIN_EN&depth2=Release request form&sampleId=41" class="depth2 <%= depth1 == 'MAIN_EN' && depth2 == 'Release request form' ? 'on' : '' %>"><span>Release request form</span></a></li>
+                <li><a href="/sample?depth1=MAIN_EN&depth2=Shipping statement&sampleId=47" class="depth2 <%= depth1 == 'MAIN_EN' && depth2 == 'Shipping statement' ? 'on' : '' %>"><span>Shipping statement</span></a></li>                
+            </ul>
+        </li>
     </ul>
   </div>
