--- a/views/ejs/sample41.ejs
+++ b/views/ejs/sample41.ejs
@@ -1,14 +1,8 @@
 <div class="content_top">
-    <div class="cont_tit">はいそう うちわけしょ</div>
+    <div class="cont_tit">Release request form</div>
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="btnEnroll" class="btn_page">
-            <span>new</span>
-        </button>
-        <button id="btnTemplate" class="btn_page">
-            <span>template</span>
-        </button>
         <button class="btn_search">
             <i class="ico_srch"></i>
             <span>search</span>
@@ -28,15 +22,7 @@
         </colgroup>
         <tbody>
         <tr>
-            <th>注文番号</th>
-            <td>
-                <input type="text" value="">
-            </td>
-            <th>作成者</th>
-            <td>
-                <input type="text" value="">
-            </td>
-            <th>作成日</th>
+            <th>Base date</th>
             <td class="ipt_date_wrap">
                 <div class="ipt_date_div">
                     <input type="text" class="ipt_date datepicker" value="2023-12-13">
@@ -45,6 +31,14 @@
                 <div class="ipt_date_div">
                     <input type="text" class="ipt_date datepicker" value="2023-12-15">
                 </div>
+            </td>
+            <th>Order number</th>
+            <td>
+                <input type="text" value="">
+            </td>
+            <th>Address</th>
+            <td>
+                <input type="text" value="">
             </td>
         </tr>
         </tbody>
@@ -57,17 +51,18 @@
     </div>
 </div>
 
+
 <style>
+.sample-tutorial {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
 .content_box {
     height: calc(100vh - 360px);
 }
 .container.full_screen_mode.active .content_box {
     height: calc(100% - 117px);
 }
-.sample-tutorial {
-    position: relative;
-    height: 100%;
-    overflow: hidden;
-}
 </style>
-<script src="js/<%= pathJs %>/sample28.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample41.js" type="text/javascript"></script>
