--- a/views/ejs/sample42.ejs
+++ b/views/ejs/sample42.ejs
@@ -1,13 +1,13 @@
 <div class="content_top">
-    <div class="cont_tit">はいそう うちわけしょ</div>
+    <div class="cont_tit">Delivery mgt</div>
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
-        <button id="btnEnroll" class="btn_page">
-            <span>new</span>
+        <button id="save" class="btn_default">
+            <span>Excel</span>
         </button>
-        <button id="btnTemplate" class="btn_page">
-            <span>template</span>
+        <button id="btnGrid" class="btn_default">
+            <span>List</span>
         </button>
         <button class="btn_search">
             <i class="ico_srch"></i>
@@ -28,23 +28,23 @@
         </colgroup>
         <tbody>
         <tr>
-            <th>注文番号</th>
-            <td>
-                <input type="text" value="">
-            </td>
-            <th>作成者</th>
-            <td>
-                <input type="text" value="">
-            </td>
-            <th>作成日</th>
+            <th>Base date</th>
             <td class="ipt_date_wrap">
                 <div class="ipt_date_div">
-                    <input type="text" class="ipt_date datepicker" value="2023-12-13">
+                    <input type="text" class="ipt_date datepicker">
                 </div>
                 <span class="line">-</span>
                 <div class="ipt_date_div">
-                    <input type="text" class="ipt_date datepicker" value="2023-12-15">
+                    <input type="text" class="ipt_date datepicker">
                 </div>
+            </td>
+            <th>Order number</th>
+            <td>
+                <input type="text" value="">
+            </td>
+            <th>Order product</th>
+            <td>
+                <input type="text" value="">
             </td>
         </tr>
         </tbody>
@@ -53,7 +53,7 @@
 
 <div class="content_box">
     <div class="sample-tutorial">
-        <div id="ss" style="width:100%;height:100%"></div>
+        <div id="ss" class="sample-spreadsheets"></div>
     </div>
 </div>
 
@@ -65,9 +65,16 @@
     height: calc(100% - 117px);
 }
 .sample-tutorial {
-    position: relative;
-    height: 100%;
-    overflow: hidden;
+   position: relative;
+   height: 100%;
+   overflow: hidden;
+}
+
+.sample-spreadsheets {
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+   float: left;
 }
 </style>
-<script src="js/<%= pathJs %>/sample28.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample42.js" type="text/javascript"></script>
