--- a/views/ejs/sample47.ejs
+++ b/views/ejs/sample47.ejs
@@ -1,5 +1,5 @@
 <div class="content_top">
-    <div class="cont_tit">はいそう うちわけしょ</div>
+    <div class="cont_tit">Shipping statement</div>
     <div class="div">
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
@@ -28,15 +28,15 @@
         </colgroup>
         <tbody>
         <tr>
-            <th>注文番号</th>
+            <th>Order number</th>
             <td>
                 <input type="text" value="">
             </td>
-            <th>作成者</th>
+            <th>Writer</th>
             <td>
                 <input type="text" value="">
             </td>
-            <th>作成日</th>
+            <th>Date of creation</th>
             <td class="ipt_date_wrap">
                 <div class="ipt_date_div">
                     <input type="text" class="ipt_date datepicker" value="2023-12-13">
@@ -70,4 +70,4 @@
     overflow: hidden;
 }
 </style>
-<script src="js/<%= pathJs %>/sample28.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample47.js" type="text/javascript"></script>
