--- a/views/ejs/sample0.ejs
+++ b/views/ejs/sample0.ejs
@@ -1,6 +1,7 @@
 <div class="content_top">
     <div class="cont_tit">INTRO</div>
     <div class="div">
+        <button id="socekTest">testestes</button>
         <button class="btn_fullscreen_off"></button>
         <button class="btn_fullscreen_on"></button>
     </div>
@@ -42,4 +43,5 @@
 
 <script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.resource.ko.17.0.2.min.js" type="text/javascript"></script>
 <script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.all.17.0.2.min.js" type="text/javascript"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="js/<%= pathJs %>/sample0.js" type="text/javascript"></script>
