--- a/views/ejs/sample23.ejs
+++ b/views/ejs/sample23.ejs
@@ -56,4 +56,5 @@ table.srch_tbl {
     height: calc(100% - 117px);
 }
 </style>
+<script src="/socket.io/socket.io.js"></script>
 <script src="js/<%= pathJs %>/sample23.js" type="text/javascript"></script>
